index.html updated

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@ header p {
    <p>Visually reimagined the book secret supreme with tables, colors and minimal elements. Everything is written here is from the original book, no commentary or extra words added by me.</p>
    <p><a href="/secretsupreme">Read</a></p>
    <h3>KarpurGauram</h3>
+   <p>A Personal Website of Nagkumar Where he writes everything he knows about Trika.</p>
    <p><a href="https://karpurgauram.xyz">Visit</a></p>
 </body>
 </html>
