--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>NeoLab - My Webdev Endevours</title>
-<meta name="description" content="Neo Void's WebLab">
-<link rel="icon" href="assets/jayshriram.png" type="image/x-icon">
-<link rel="alternate" type="application/rss+xml" href="/rss.xml">
+<title>Trikashasan</title>
+<meta name="description" content="Trikashasan - Secrets Revealed of Trika">
+<link rel="icon" href="/assets/icons/trident.png" type="image/x-icon">
 
-<link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-B5Qt9EMX.js">
+<link rel="modulepreload" crossorigin href="/assets/js/modulepreload-polyfill-B5Qt9EMX.js">
 
 <style>
 :root {
@@ -137,20 +136,18 @@ header p {
 }
 
 </style>
-
-  <meta name="og:image" content="/preview.png">
-  <link rel="icon" href="/icon.png" type="image/png">
 </head>
 
 <header>
-  <h1>Welcome to Trikshasan</h1>
+  <h1>🔱 Welcome to Trikshasan</h1>
   <p>Here we recall knowledge of kashmir Shaivism</p>
 </header>
 </body>
    <h3>Secret Supreme</h3>
+
    <p>Visually reimagined the book secret supreme with tables, colors and minimal elements. Everything is written here is from the original book, no commentary or extra words added by me.</p>
    <p><a href="/secretsupreme">Read</a></p>
-   <h3>KarpurGauram</h3>
+   <h3>Karpurgauram</h3>
    <p>A Personal Website of Nagkumar Where he writes everything he knows about Trika.</p>
    <p><a href="https://karpurgauram.xyz">Visit</a></p>
 </body>
