--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ header p {
 </head>
 
 <header>
-  <h1>🔱 Welcome to Trikshasan</h1>
+  <h1>🔱 Welcome to Trikashasan</h1>
   <p>Here we recall knowledge of kashmir Shaivism</p>
 </header>
 </body>
