--- a/secretsupreme/page-03.html
+++ b/secretsupreme/page-03.html
@@ -106,13 +106,16 @@ footer a {
 		</p>
 		<br>
 
-		<strong>Pañcha Tanmätras — Five Subtle Elements</strong>
-		<p style="color: #ecce95;">
-		gandha = smell <br>
-		rasa = taste <br>
-		rūpa = form <br>
-		sparśa = touch <br>
-		śabda = sound
+		<p><strong>Pañcha Tanmätras — Five Subtle Elements</strong><br>
+		The five tanmatras correspond to the five mahabhutas.<br>
+		<br><span style="color: #ecce95;">
+		from earth --> gandha = abode of smell <br>
+		from water --> rasa = abode of taste <br>
+		from fire --> rūpa = abode of form <br>
+		from air --> sparśa = abode of touch <br>
+		from akasha --> śabda = abode of sound
+		</span>
+		<br>
 		</p>
 		<br>
 
