--- a/secretsupreme/page-03.html
+++ b/secretsupreme/page-03.html
@@ -8,70 +8,9 @@
 
 <title>Secret Supreme | Page 03 </title>
 <meta name="description" content="Secret Supreme By Swami LakshmanJoo">
+<link rel="stylesheet" href="/assets/styles/styles.css">
 <link rel="icon" href="/assets/icons/trident.png" type="image/png">
 <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-B5Qt9EMX.js">
-
-<style>
-
-body {
-    width: 210mm; /* A4 width */
-    margin: 0 auto; /* Center the page */
-    text-align: center;
-    font-size: 112.5%;
-    font-family: sans-serif;
-}
-
-header {
-     text-align: center;
-}
-
-a {
-  text-decoration: inherit;
-  color: rebeccapurple;
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: rgb(17, 17, 28, 1);
-    color: oklch(90% 0.008 286.75);
-  }
-  a {
-    color: oklch(87.14% 0.031 7.09);
-  }
-}
-
-@media (prefers-color-scheme: dark) and (prefers-contrast: more) {
-  body {
-    background-color: oklch(21.14% 0.021 285.75);
-    color: oklch(90% 0.008 286.75);
-  }
-}
-
-/*main {
-  margin-block: 0;
-  margin-inline: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center; 
-  min-height: 60svh;
-}*/
-
-footer {
-  min-height: 35svh;
-  display: flex;
-  justify-content: center;
-  align-items: end;
-}
-
-footer a {
-  border-radius: 2px /* nicer outline */;
-  text-align: center;
-  vertical-align: center;
-  opacity: 0.4;
-  padding: 10px;
-  margin: auto;
-}
-</style>
 
 </head>
 
