--- a/secretsupreme/page-02.html
+++ b/secretsupreme/page-02.html
@@ -44,7 +44,7 @@
 		It gives room to exist and move to the other perceptible gross elements. <br>
 		Its like special vacume which filled with other gross elements. <br>
 		<br>
-		<div style="border:3px double white">
+		<div style="border:3px double white; padding: 10px;">
 		These tatvas are gross and called Mahabhutas (great elemenents) because whole universe <br>
 		is based on these elements.</div> <br>
 		</p>
@@ -60,27 +60,27 @@
 			  </tr>
 			  <tr>
 			      <td>Earth</td>
-			      <td>Gandha</td>
-			      <td>abode of impression of smell</td>
+				  <td><span class="tooltip">Gandha<p class="info">The word ‘gandha’ means <b>smell</b> but it is not exactly smell, it is the <b>abode of smell</b>, where smell lives. And that abode of smell is called gandha tanmatra.</p></span></td>
+				  <td>abode of of smell</td>
 			  </tr>
 			  <tr>
-			      <td>Water</td>
-			      <td>Taste</td>
+					  <td>Water</td>
+			      <td><span class="tooltip">Rasa<p class="info">Rasa tanmatra, has come out from the element of water (jala mahabhuta). Rasa tanmatra is residence of the impression of taste (rasa).</p></span></td>
 			      <td>residance of impression of taste</td>
 			  </tr>
 			  <tr>
 			      <td>Fire</td>
-			      <td>Rupa</td>
+				  <td><span class="tooltip">Rupa<p class="info">From the element of fire (tejas mahabhuta) issues forth rupa tanmatra. Though the word 'rupa’ means form, rupa tanmatra is not exactly form it is the residence of form. The residence of the impression of form. Where the impression of form resides and this residence is called rupa tanmatra.</p></span></td>
 			      <td>residance of form</td>
 			  </tr>
 			   <tr>
 			      <td>Air</td>
-			      <td>Sparsa</td>
+				  <td><span class="tooltip">Sparsa<p class="info">From the element of air (vayu mahabhuta) rises sparsa tanmatra which is the tanmatra of touch the sensation of touch. This tanmatra is the residence of the sensation of touch.</p></span></td>
 			      <td>residance of sensation of touch</td>
 			  </tr>
 			   <tr>
 			      <td>Ether</td>
-			      <td>Sabda</td>
+				  <td><span class="tooltip">Sabda<p class="info">Rising from the element of ether (akasa mahabhuta) is sabda tanmatra, the tanmatra of sound. This is the residence of the sensation of sound.</p></span></td>
 			      <td>residance of sensation of sound</td>
 			  </tr>
 		       </table>
@@ -89,7 +89,7 @@
 
 		<strong>Pañca karmendriyas — Five organs of action</strong>
 
-		<p>After the five tanmdtras comes out the five tattvas which are known as the five karmendriyas, the five organs of action.<br>
+		<p>After the five tanmatras comes out the five tattvas which are known as the five karmendriyas, the five organs of action.<br>
 		</p>
 
 		<table style="color:#a1d9d9;width:fit-content;margin:auto">
@@ -136,27 +136,27 @@
 				<th>Indication</th>
 			</tr>
 			<tr>
-				<td>ghrāņa</td>
+					<td><span class="tooltip">ghrāņa<p class="info">Ghrana means nose. The use of the word ‘nose’ does not refer to breathing, rather ‘nose’ is used here to indicate smell. This is the organ of cognition by which you smell. It creates odours.</p></span></td>
 				<td>Nose</td>
 				<td>Smell</td>
 			</tr>
 			<tr>
-				<td>rasanā</td>
+					<td><span class="tooltip">rasanā<p class="info">Rasana means tongue. The use of the word tongue here does not refer to speech but to taste because, though speech also comes from the tongue, it is an organ of action, not an organ of cognition. Rasana tattva is that organ of cognition by which you taste. It creates flavours.</p></span></td>
 				<td>Tongue</td>
 				<td>Taste</td>
 			</tr>
 			<tr>
-				<td>cakşu</td>
+					<td><span class="tooltip">cakşu<p class="info">Caksuh means eye. It is that organ of cognition by which you see. It creates form (rupah). </p></span></td>
 				<td>Eye</td>
 				<td>seeing</td>
 			</tr>
 			<tr>
-				<td>tvak</td>
+					<td><span class="tooltip">tvak<p class="info"> The fourth jnyanendriya is tvak tattva, tvak means skin. It is that organ of cognition by which you feel. It creates touch.</p></span></td>
 				<td>skin</td>
 				<td>touch</td>
 			</tr>
 			<tr>
-				<td>śrotra</td>
+					<td><span class="tooltip">śrotra<p class="info">Srotra means ear. It is that organ of cognition by which you hear. It creates sound.</p></span></td>
 				<td>ear</td>
 				<td>hearing</td>
 			</tr>
@@ -176,22 +176,22 @@
 				<th>Indication</th>
 			</tr>
 			<tr>
-				<td>manas</td>
+					<td><span class="tooltip">manas<p class="info">Manas tattva, the element of mind, is said in Sanskrit to be ‘sankalpasadhana', the means by which you create thoughts, any thought such as I am going there, I will go there, I have done this, I have done that, this is the action of manas.</p></span></td>
 				<td>mind</td>
 				<td>creating thoughts</td>
 			</tr>
 			<tr>
-				<td>buddhiḥ</td>
+					<td><span class="tooltip">buddhiḥ<p class="info">The action of buddhih tattva, the element of intellect, is to confirm whether I should do this or not. This is the field of the confirmation of the rightness of any proposed action whether intellectual or moral because first you must determine the rightness of a proposed decision or action and then you make a choice dependent on this rightness. You ask yourself internally, should I do this action or not, is this the right decision or not, and buddhi will reply to you, no, you should not do it, or yes, you should do it. This is bad, it is wrong to do it. This is good, you should do it. This answer is right, this answer is wrong, all this is done by the intellect.</p></span></td>
 				<td>intellect</td>
 				<td>decision making</td>
 			</tr>
 			<tr>
-				<td>ahaṁkāra</td>
+					<td><span class="tooltip">ahaṁkāra<p class="info">Ahamkara tattva is the element of ego which is connected with objectivity. When you attribute any action or knowledge to your own self such as, I have done this and I am mistaken, I have done that and I ought not to have done it, or I did a wonderful thing today which will benefit me alot, this is the action of ahamkara tattva. It creates limited “I” consciousness, the limited ego which is connected with objectivity.</p></span></td>
 				<td>ego (objective)</td>
 				<td>attributing to I</td>
 			</tr>
 			<tr>
-				<td>prakŗiti</td>
+					<td><span class="tooltip">prakŗiti<p class="info large">Rising still further we come to the two tattvas prakriti and purusa. These two tattvas are interdependent. Prakrti is dependent upon purusa and purusa is dependent upon praknti. Prakriti is that element which is referred to and is known as “nature”. It is the field where the three tendencies arise and flow forth. These three tendencies are known as the three gunas, the three qualities, which are respectively satva, rajas, and tamas. Prakriti is the combination of these three gunas but without any distinction. The three gunas come out from prakriti, and so it is said that the three gunas are not in the field of the tattvas, they are not to be considered as tattvas, because they are created by prakriti. Tattvas are creators, they are not created. Therefore, it is not the gunas which are tattvas but their creator prakriti. And that which responds to that prakriti, which owns that prakriti is called purusa.</p></span></td>
 				<td>nature</td>
 			</tr>
 			<tr>
@@ -201,9 +201,14 @@
 		</table>
 		<br>
 
-		<div style="border: 1px solid #b5a1e4">
+		<div style="border: 1px solid #b5a1e4; padding: 10px;">
 		<p>In saivism, purusa is not a realized soul. Purusa tattva is bound and limited just as ahamkdra lallva is. The only 1 difference that exists between purusa and ahamkara is that (purusa is connected with subjectivity and ahamkara is connected with objectivity. And this purusa is entangled and bound in five ways which are the five kancukas niyati, kala, raga, vidya and kala.</p>
 		</div>
+
+		<br>
+		<div style="border:3px double white; padding: 10px;">
+           All of these 24 tattvas exist in the field of maya, in the field of objectivity.
+		</div> <br>
 
 		<br>
 
